# api/openapi.yaml
@@ -580,7 +580,7 @@ components:
         surname:
           type: string
           title: Surname
-        isAdmin:
+        isadmin:
           type: boolean
           title: Isadmin
         password:
@@ -591,7 +591,7 @@ components:
       - email
       - name
       - surname
-      - isAdmin
+      - isadmin
       - password
       title: UserCreate
       description: Schema for creating a new user
@@ -607,7 +607,7 @@ components:
         surname:
           type: string
           title: Surname
-        isAdmin:
+        isadmin:
           type: boolean
           title: Isadmin
         id:
@@ -618,7 +618,7 @@ components:
       - email
       - name
       - surname
-      - isAdmin
+      - isadmin
       - id
       title: UserResponse
       description: Schema with user response
